--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,10 @@
 <footer>
+  <script type="text/javascript">
+    $(function(){
+      $("pre").addClass("prettyprint");
+      prettyPrint();
+    });
+  </script>
   <a href="http://github.com/chloerei/scribble" class="muted">built with Jekyll using Scribble theme</a>
   <br />
   <br />
