--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,9 @@
 <link href='{{ site.baseurl }}/stylesheets/style.css' rel='stylesheet' type='text/css' />
 <link href='{{ site.baseurl }}/stylesheets/syntax.css' rel='stylesheet' type='text/css' />
 <link href='{{ site.baseurl }}/stylesheets/responsive.css' rel='stylesheet' type='text/css' />
+<link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/google_prettify/sunburst.css">
 <link href="{{ site.baseurl }}/feed.xml" rel="alternate" type="application/rss+xml">
+<script src="{{ site.baseurl }}/javascripts/prettify.js"></script>
 <script src='{{ site.baseurl }}/javascripts/jquery.js' type='text/javascript'></script>
 <script src='{{ site.baseurl }}/javascripts/basics.js' type='text/javascript'></script>
 <meta content='width=device-width, initial-scale=1.0, user-scalable=no' name='viewport'>
