--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -359,3 +359,32 @@ img {
   margin-left: -424px; }
 .paging .right {
   margin-left: 404px; }
+
+
+
+.content table {
+  padding: 0;border-collapse: collapse; 
+font-size: 14px;
+line-height: 1.6em;}
+.content table tr {
+    border-top: 1px solid #cccccc;
+    background-color: white;
+    margin: 0;
+    padding: 0; }
+   .content  table tr:nth-child(2n) {
+      background-color: #f8f8f8; }
+  .content   table tr th {
+      font-weight: bold;
+      border: 1px solid #cccccc;
+      text-align: left;
+      margin: 0;
+      padding: 6px 13px; }
+   .content  table tr td {
+      border: 1px solid #cccccc;
+      text-align: left;
+      margin: 0;
+      padding: 6px 13px; }
+   .content  table tr th :first-child, .content table tr td :first-child {
+      margin-top: 0; }
+   .content  table tr th :last-child, .content table tr td :last-child {
+      margin-bottom: 0; }
